# FastInference

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  build.md  conan.conf  conanfile.txt
src/: main.cpp
